[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/TransitionScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MenuScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SceneManager.gd" type="Script" id=3]

[node name="SceneManager" type="Node2D"]
script = ExtResource( 3 )

[node name="TransitionScene" parent="." instance=ExtResource( 1 )]

[node name="CurrentScene" type="Node" parent="."]

[node name="Menu" parent="CurrentScene" instance=ExtResource( 2 )]

[connection signal="transitioned" from="TransitionScene" to="." method="_on_TransitionScene_transitioned"]
